--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="header">Header領域</div>
   <div class="main">
-    <h1>見出し</h1>
-    <p>コンテンツ</p>
+    <h1>江南PC部</h1>
+    <p>あああ</p>
     <img src="img/sample1.jpg">
   </div>
   <div class="footer">
