--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="header">Header領域</div>
   <div class="main">
     <h1>江南PC部</h1>
-    <p>あああ</p>
+    <p><div class="rotate_test">あああ</div></p>
     <img src="img/sample1.jpg">
   </div>
   <div class="footer">
