--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="header">Header領域</div>
   <div class="main">
     <h1>江南PC部</h1>
-    <p><div class="rotate">回転</div></p>
+    <p>テスト</p>
     <img src="img/sample1.jpg">
   </div>
   <div class="footer">
