--- a/インデックス.html
+++ b/インデックス.html
@@ -9,9 +9,8 @@
 <body>
   <div class="header">Header領域</div>
   <div class="main">
-    <h1>江南PC部</h1>
-    <p>テスト</p>
-    <img src="img/sample1.jpg">
+    <h1>平塚江南PC部</h1>
+    <p>とても静的なサイト</p>
   </div>
   <div class="footer">
     <span>Footer領域</span>
