--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="header">Header領域</div>
   <div class="main">
     <h1>平塚江南PC部</h1>
-    <p>とても静的なサイト</p>
+    <p><div class="rotate">とても静的なサイト</div></p>
   </div>
   <div class="footer">
     <span>Footer領域</span>
