--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
-  /*<div class="header">Header領域</div>
+  <!--  <div class="header">Header領域</div> -->
   <div class="main">
     <h1>平塚江南PC部</h1>
     <p><span id="box1">とても静的なサイト</span></p>
