--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>HTML Sample</title>
+  <title></title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
   <!--  <div class="header">Header領域</div> -->
   <div class="main">
-    <h1>平塚江南PC部</h1>
-    <p><span id="box1">とても静的なサイト</span></p>
+    <h1>平塚江南PC部ホームページ(仮)</h1>
+    <p><span id="box1">テスト</span></p>
   </div>
   <div class="footer">
     <span>Footer領域</span>
