--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="sample.js"></script>
 </head>
-<body background="a.jpg" marginwidth="0" marginheight="0">
+<body background="https://raw.githubusercontent.com/kohnanpc/2022/main/a.png" marginwidth="0" marginheight="0">
   <!--  <div class="header">Header領域</div> -->
   <div class="main">
     <h1>平塚江南PC部ホームページ(仮)</h1>
