--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>平塚江南PC部ホームページ(仮)</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="sample.js"></script>
 </head>
 <body background="https://raw.githubusercontent.com/kohnanpc/2022/main/a.png" marginwidth="0" marginheight="0">
-  <!--  <div class="header">Header領域</div> -->
+  <div class="header">平塚江南PC部ホームページ(仮)</div>
   <div class="main">
     <h1>平塚江南PC部ホームページ(仮)</h1>
     <p><span id="box1">テスト</span></p>
