--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="sample.js"></script>
 </head>
 <body background="https://raw.githubusercontent.com/kohnanpc/2022/main/a.png" marginwidth="0" marginheight="0">
-  <div class="header"><h1>平塚江南PC部ホームページ(仮)</h1></div>
+  <div class="header">平塚江南PC部ホームページ(仮)</div>
   <div class="main">
     <p><span id="box1">テスト</span></p>
   </div>
