--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!doctype html>
-<html lang="ja">
-<head>
+<html lang="ja"><head>
   <meta charset="UTF-8">
   <title>平塚江南PC部ホームページ(仮)</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
 </head>
-<body background="https://raw.githubusercontent.com/kohnanpc/2022/main/a.png" marginwidth="0" marginheight="0">
+<body background="a.png" marginwidth="0" marginheight="0">
   <div class="header">平塚江南PC部ホームページ(仮)</div>
   <div class="main">
-    <p><span id="box1">テスト</span></p>
+    <p><span id="box1">200 OK</span></p>
   </div>
-  <div class="footer">
-    <span>Footer領域</span>
-    <a href="#">リンク</a>
-  </div>
-</body>
-</html>
+</body></html>
