--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body background="a.png" marginwidth="0" marginheight="0">
   <div class="header">平塚江南PC部ホームページ(仮)</div>
   <div class="main">
-    <p><span id="box1">200 OK</span></p>
+    <p><span id="box1">テスト</span></p>
   </div>
 </body></html>
