--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        txt[0] = "test";
        txt[1] = "テスト";
        n = Math.floor(Math.random()*txt.length);
-       document.write("<p><span id="box1">"+txt[n]+"</span></p>");
+       document.write("<p><span id='box1'>"+txt[n]+"</span></p>");
     </script>
   </div>
 </body></html>
