--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
        txt[1] = "テスト";
        n = Math.floor(Math.random()*txt.length);
        document.write("<p><span id='box1'>"+txt[n]+"</span></p>");
+       img = new Array();
+       img[0] = "https://image.news.livedoor.com/newsimage/stf/4/a/4a392_249_20190308003.jpg";
+       img[1] = "https://i.ytimg.com/vi/kTqnYqQKfmU/maxresdefault.jpg";
+       img[2] = "https://img.cdn.nimg.jp/s/nicovideo/thumbnails/40881712/40881712.78210005.original/r1280x720l?key=f2abb83e56ae154d97e1af9bd68f81437d34669c6429053c42bc357019de7c8d";
+       n = Math.floor(Math.random()*img.length);
+       document.write("<img src='"+img[n]+"' border='0'>");
     </script>
   </div>
 </body></html>
